ANW-1438 Color contrast fixes
(cherry picked from commit 56e85e7cb42193431d85145677ad367b34b6694d)

--- a/frontend/app/assets/stylesheets/archivesspace/buttons.less
+++ b/frontend/app/assets/stylesheets/archivesspace/buttons.less
@@ -23,6 +23,22 @@
   display: none;
 }
 
+.btn-default.dropdown-toggle.last {
+  &:hover,
+  &:active {
+    background-color: #6e6e6e;
+    color: #fff;
+  }
+}
+
+.btn-group > .btn-xs {
+  &.disabled,
+  &[disabled] {
+    color: #000;
+    background-color: #aaa;
+  }
+}
+
 .btn.busy .btn-busy-label {
   display: inline;
 }
